--- a/cube/blackpill_test_v2.ioc
+++ b/cube/blackpill_test_v2.ioc
@@ -65,15 +65,16 @@ Mcu.Name=STM32F401C(B-C)Ux
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PA0-WKUP
-Mcu.Pin10=PA8
-Mcu.Pin11=PA9
-Mcu.Pin12=PA13
-Mcu.Pin13=PA14
-Mcu.Pin14=PA15
-Mcu.Pin15=PB3
-Mcu.Pin16=VP_SYS_VS_tim9
-Mcu.Pin17=VP_TIM10_VS_ClockSourceINT
-Mcu.Pin18=VP_TIM11_VS_ClockSourceINT
+Mcu.Pin10=PB15
+Mcu.Pin11=PA8
+Mcu.Pin12=PA9
+Mcu.Pin13=PA13
+Mcu.Pin14=PA14
+Mcu.Pin15=PA15
+Mcu.Pin16=PB3
+Mcu.Pin17=VP_SYS_VS_tim9
+Mcu.Pin18=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin19=VP_TIM11_VS_ClockSourceINT
 Mcu.Pin2=PA1
 Mcu.Pin3=PA2
 Mcu.Pin4=PA3
@@ -82,7 +83,7 @@ Mcu.Pin6=PA5
 Mcu.Pin7=PA6
 Mcu.Pin8=PA7
 Mcu.Pin9=PB10
-Mcu.PinsNb=19
+Mcu.PinsNb=20
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401CCUx
@@ -147,6 +148,10 @@ PB10.GPIOParameters=GPIO_Label
 PB10.GPIO_Label=BUTTON1_PB10
 PB10.Locked=true
 PB10.Signal=GPIO_Input
+PB15.GPIOParameters=GPIO_Label
+PB15.GPIO_Label=LED_BLUE_PB15
+PB15.Locked=true
+PB15.Signal=GPIO_Output
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=LEFT_MOTOR_BACKWARD_TIM2_CH2
 PB3.Signal=S_TIM2_CH2
