--- a/cube/blackpill_test_v2.ioc
+++ b/cube/blackpill_test_v2.ioc
@@ -65,17 +65,20 @@ Mcu.Name=STM32F401C(B-C)Ux
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PA0-WKUP
-Mcu.Pin10=PB15
-Mcu.Pin11=PA8
-Mcu.Pin12=PA9
-Mcu.Pin13=PA13
-Mcu.Pin14=PA14
-Mcu.Pin15=PA15
-Mcu.Pin16=PB3
-Mcu.Pin17=VP_SYS_VS_tim9
-Mcu.Pin18=VP_TIM10_VS_ClockSourceINT
-Mcu.Pin19=VP_TIM11_VS_ClockSourceINT
+Mcu.Pin10=PB12
+Mcu.Pin11=PB13
+Mcu.Pin12=PB14
+Mcu.Pin13=PB15
+Mcu.Pin14=PA8
+Mcu.Pin15=PA9
+Mcu.Pin16=PA13
+Mcu.Pin17=PA14
+Mcu.Pin18=PA15
+Mcu.Pin19=PB3
 Mcu.Pin2=PA1
+Mcu.Pin20=VP_SYS_VS_tim9
+Mcu.Pin21=VP_TIM10_VS_ClockSourceINT
+Mcu.Pin22=VP_TIM11_VS_ClockSourceINT
 Mcu.Pin3=PA2
 Mcu.Pin4=PA3
 Mcu.Pin5=PA4
@@ -83,7 +86,7 @@ Mcu.Pin6=PA5
 Mcu.Pin7=PA6
 Mcu.Pin8=PA7
 Mcu.Pin9=PB10
-Mcu.PinsNb=20
+Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F401CCUx
@@ -148,8 +151,20 @@ PB10.GPIOParameters=GPIO_Label
 PB10.GPIO_Label=BUTTON1_PB10
 PB10.Locked=true
 PB10.Signal=GPIO_Input
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=YELLOW_LED_PB12
+PB12.Locked=true
+PB12.Signal=GPIO_Output
+PB13.GPIOParameters=GPIO_Label
+PB13.GPIO_Label=GREEN_LED_PB13
+PB13.Locked=true
+PB13.Signal=GPIO_Output
+PB14.GPIOParameters=GPIO_Label
+PB14.GPIO_Label=RED_LED_PB14
+PB14.Locked=true
+PB14.Signal=GPIO_Output
 PB15.GPIOParameters=GPIO_Label
-PB15.GPIO_Label=LED_BLUE_PB15
+PB15.GPIO_Label=BLUE_LED_PB15
 PB15.Locked=true
 PB15.Signal=GPIO_Output
 PB3.GPIOParameters=GPIO_Label
