--- a/cube/blackpill_test_v1.ioc
+++ b/cube/blackpill_test_v1.ioc
@@ -63,11 +63,15 @@ Mcu.Name=STM32F411C(C-E)Ux
 Mcu.Package=UFQFPN48
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PA0-WKUP
-Mcu.Pin10=PA8
-Mcu.Pin11=PA9
-Mcu.Pin12=PA15
-Mcu.Pin13=PB3
-Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin10=PB12
+Mcu.Pin11=PB13
+Mcu.Pin12=PB14
+Mcu.Pin13=PB15
+Mcu.Pin14=PA8
+Mcu.Pin15=PA9
+Mcu.Pin16=PA15
+Mcu.Pin17=PB3
+Mcu.Pin18=VP_SYS_VS_Systick
 Mcu.Pin2=PA1
 Mcu.Pin3=PA2
 Mcu.Pin4=PA3
@@ -76,7 +80,7 @@ Mcu.Pin6=PA5
 Mcu.Pin7=PA6
 Mcu.Pin8=PA7
 Mcu.Pin9=PB10
-Mcu.PinsNb=15
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411CEUx
@@ -143,6 +147,22 @@ PB10.GPIOParameters=GPIO_Label
 PB10.GPIO_Label=BUTTON
 PB10.Locked=true
 PB10.Signal=GPIO_Input
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=YELLOW_LED_PB12
+PB12.Locked=true
+PB12.Signal=GPIO_Output
+PB13.GPIOParameters=GPIO_Label
+PB13.GPIO_Label=GREEN_LED_PB13
+PB13.Locked=true
+PB13.Signal=GPIO_Output
+PB14.GPIOParameters=GPIO_Label
+PB14.GPIO_Label=RED_LED_PB14
+PB14.Locked=true
+PB14.Signal=GPIO_Output
+PB15.GPIOParameters=GPIO_Label
+PB15.GPIO_Label=BLUE_LED_PB15
+PB15.Locked=true
+PB15.Signal=GPIO_Output
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=LEFT_MOTOR_BACKWARD
 PB3.Locked=true
