--- a/cube/sebastion.ioc
+++ b/cube/sebastion.ioc
@@ -177,8 +177,8 @@ ProjectManager.MainLocation=Src
 ProjectManager.NoMain=true
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=sebastion_v1.ioc
-ProjectManager.ProjectName=sebastion_v1
+ProjectManager.ProjectFileName=sebastion.ioc
+ProjectManager.ProjectName=sebastion
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
